wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
for details on configuring this project to bundle and minify static web assets. */
body {
    padding-top: 50px;
    padding-bottom: 20px;
}

/* Wrapping element */
/* Set some basic padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}


/* Hide/rearrange for smaller screens */
@media screen and (max-width: 767px) {
    /* Hide captions */
    .carousel-caption {
        display: none;
    }
}

#myVideo {
    position: fixed;
    right: 0;
    bottom: 0;
    min-width: 100%; 
    min-height: 100%;
}

.mlogo {
    position: fixed;
    bottom: 0;
    top:0;
    left:0;
    background: rgba(0, 0, 0, 0.5);
    width: 100%;
    padding: 20px;
}
.mlogo img{
    margin-top:10%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 40%;
}

.mlogo button{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

img.profile-pic{
  display: block;
  width: 100%;
}

#student-videos{
  height: 200px;
  overflow-y: scroll;
}

img.my-video{
  display: block;
  width: 100%;
}
.naving{
    display: block;
    margin-left: auto;
    margin-right: auto;
    width:350px;
}

.pic{
    width:235px;
    border-radius:200%;
    border:3px solid #93d5d8;
}

body {font-family: Verdana, sans-serif;}

/* Month header */
.month {
  padding: 40px 15px;
  width: 100%;
  background: #f79240;
  text-align: center;
}

/* Month list */
.month ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.month ul li {
  color: white;
  font-size: 15px;
  text-transform: uppercase;
  letter-spacing: 2px;
}

/* Previous button inside month header */
.month .prev {
  float: left;
  padding-top: 5px;
}

/* Next button */
.month .next {
  float: right;
  padding-top: 5px;
}

/* Weekdays (Mon-Sun) */
.weekdays {
  margin: 0;
  padding: 5px 0;
  background-color:#ddd;
}

.weekdays li {
  display: inline-block;
  width: 13%;
  color: #666;
  text-align: center;
}

/* Days (1-31) */
.days {
  padding: 10px 0;
  background: #eee;
  margin: 0;
}

.days li {
  list-style-type: none;
  display: inline-block;
  width: 13%;
  text-align: center;
  margin-bottom: 5px;
  font-size:13px;
  color: #777;
}

/* Highlight the "current" day */
.days li .active {
  padding: 5px;
  background: #ee3331;
  color: white !important
}

.about{
    background-color: #ee3331;
    padding:5px;
    color:white;
    font-weight:bold;
    font-size:20px;

}
#styleModal, #awardModal, #certiModal{
  position: fixed;
  top: 30%;
  left: 40%;
  height: 200px;
  background: rgba(0, 0, 0, 0.774);
  padding: 1%;
  color: white;
  font-weight: bold;
}
#videoModal{
  position: fixed;
  top: 15%;
  left: 17%;
  height: 800px;
  background: rgba(0, 0, 0, 0.774);
  padding: 1%;
  color: white;
  font-weight: bold;
}
.style{
    background-color: #f79240;
    padding:5px;
    color:white;
    font-weight:bold;
    font-size:20px;    
}
.certi{
    background-color: #89c7ca;
    padding:5px;
    color:white;
    font-weight:bold;
    font-size:20px;

}
.videos{
    background-color: #84cdd1;
    padding:5px;
    width:100%;
    height:185px;
}
.videos h4{
    color: white;
    font-weight:bold;
    padding-left: 22px;
    font-size:20px;
}

.video{
    background-color: #ee3331;
    padding:5px;
    width:100%;
    height:185px;
}
.video h4{
    color: white;
    font-weight:bold;
    padding-left: 22px;
    font-size:20px;
}
.namest{
    color:#89c7ca;
    font-weight:bold;
}
.nameint{
    color:#ee3331;
    font-weight:bold;
}

